[package]
name = "microos"
version = "0.1.0"
authors = ["LinkXSystem <linkasde_system@163.com>"]
edition = "2018"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[dependencies]
bootloader = "0.8.0"
